fixed rotation issue and clipping blocks issue

--- a/src/styles/MainGrid.scss
+++ b/src/styles/MainGrid.scss
@@ -32,6 +32,10 @@
     background-color: blue;
   }
 
+  .green {
+    background-color: green;
+  }
+
   .red {
     background-color: red;
   }
